Atualizando o Spring Authorization Server e properties com nomes alterados