@@ -2,7 +2,7 @@ package com.algaworks.algafood.core.security;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.config.annotation.method.configuration.EnableGlobalMethodSecurity;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.core.GrantedAuthority;
@@ -13,28 +13,23 @@ import org.springframework.security.web.SecurityFilterChain;
 
 import java.util.Collection;
 import java.util.Collections;
-import java.util.stream.Collectors;
 
 @Configuration
 @EnableWebSecurity
-@EnableGlobalMethodSecurity(prePostEnabled = true)
+@EnableMethodSecurity
 public class ResourceServerConfig {
 
     @Bean
     public SecurityFilterChain resourceServerFilterChain(HttpSecurity httpSecurity) throws Exception {
         httpSecurity
-                .authorizeRequests()
-                .antMatchers("/oauth2/**").authenticated()
-                .and()
-                    .csrf().disable()
-                    .cors()
+                .formLogin(customizer -> customizer.loginPage("/login"))
+                .csrf().disable()
+                .cors()
                 .and().oauth2ResourceServer()
                     .jwt()
                     .jwtAuthenticationConverter(jwtAuthenticationConverter());
 
-        return httpSecurity
-                .formLogin(customizer -> customizer.loginPage("/login"))
-                .build();
+        return httpSecurity.build();
     }
 
     private JwtAuthenticationConverter jwtAuthenticationConverter() {
@@ -53,7 +48,7 @@ public class ResourceServerConfig {
             grantedAuthorities.addAll(authorities
                     .stream()
                     .map(SimpleGrantedAuthority::new)
-                    .collect(Collectors.toList()));
+                    .toList());
 
             return grantedAuthorities;
         });
